# safetycage

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  safetycage_pckg.code-workspace
examples/: main.py  pyproject.toml
examples/components/: doctor.py  mahalanobis.py  msp.py  spardacus.py
examples/use_case/notebooks/cifar10/: doctor_tutorial.ipynb  mahalanobis_tutorial .ipynb  mahalanobis_tutorial.ipynb  msp_tutorial.ipynb  spardacus_tutorial.ipynb
examples/use_case/notebooks/mnist/: doctor_tutorial.ipynb  mahalanobis_tutorial .ipynb  mahalanobis_tutorial.ipynb  msp_tutorial.ipynb  spardacus_tutorial.ipynb
examples/use_case/results/: metrics_test.json
examples/use_case/src/data/: keras_cifar10_datahandler.py  keras_mnist_datahandler.py  keras_mnist_datamodule.py
examples/use_case/src/model/: keras_modelhandler.py
examples/use_case/train_model/: main _mlp_mnist.py  main_cnn_cifar10.py  trainer.py
paper/: Makefile  paper.bib  paper.md
src/safetycage/: safetycage.py
src/safetycage/ABC/: modelmodule.py
src/safetycage/methods/: doctor.py  mahalanobis.py  msp.py  spardacus.py
src/safetycage/utils/: evaluate.py  functions_library.py  plot_functions.py
src/safetycage_testing/: example.py
src/safetycage_testing/ABC/: base_datahandler.py  base_modelhandler.py  datamodule.py  modelmodule.py  safetycage.py
src/safetycage_testing/methods/: doctor.py  mahalanobis.py  msp.py  spardacus.py
src/safetycage_testing/utils/: evaluate.py  functions_library.py  plot_functions.py
tests/: test_example.py
(+1 files in other folders)
