[build-system]
requires = ["uv_build >= 0.10.0, <0.11.0"]
build-backend = "uv_build"

[project]
name = "safetycage_testing"
version = "0.1.8"
authors = [
  { name="jq11", email="author@example.com" },
]
description = "The package building up to the official safetycage package"
readme = "README.md"
requires-python = "==3.11.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "joblib==1.3.2",
    "matplotlib==3.8.2",
    "numpy>=1.25.2",
    "omegaconf==2.3.0",
    "pyrootutils==1.0.4",
    "scikit-learn==1.1.3",
    "scipy==1.9.3",
    "statsmodels==0.13.5",
    "tqdm>=4.67.3",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[tool.uv]
package = true

[tool.uv.sources]
safetycage-testing = { workspace = true }

[dependency-groups]
dev = [
    "safetycage-testing",
]
